--- a/linuxpy/index.html
+++ b/linuxpy/index.html
@@ -6,7 +6,7 @@
     <title>Kian Livestream</title>
   </head>
   <body>
-    <img width='100%' src='http://127.0.0.1:8000/stream'>
+    <img width='100%' src='/stream'>
   </body>
 </html>
 
